Revert "Fix native chat spacing sliders"
This reverts commit 9fc6d31e1722238d6da76a8adee807b047979864.

--- a/style.css
+++ b/style.css
@@ -36,12 +36,6 @@ body {
     --active: var(--customThemeColor);
     --SmartThemeCheckboxTickColor: var(--SmartThemeBlurTintColor);
     --customMesPadding: 1em;
-    --moonlit-sb-message-margin-scale: var(--messageMarginScale, 1);
-    --moonlit-sb-message-inline-padding: calc(10px * var(--moonlit-sb-message-margin-scale));
-    --moonlit-sb-message-style-inline-padding: calc(1em * var(--moonlit-sb-message-margin-scale));
-    --moonlit-sb-message-avatar-gap: calc(var(--customMesPadding) / 2 * var(--moonlit-sb-message-margin-scale));
-    --moonlit-sb-message-line-height-desktop: calc(var(--mainFontSize) + var(--lineSpacingDesktopLeading, .5rem));
-    --moonlit-sb-message-line-height-mobile: calc(var(--mainFontSize) + var(--lineSpacingMobileLeading, .35rem));
     --customRippleAvatarRatio: 1.5;
     --moonlit-sb-topbar-offset: var(--sb-topbar-primary-height, var(--topBarBlockSize));
 
@@ -1016,7 +1010,7 @@ body:has(#sb-topbar-stack) #top-settings-holder :is(.drawer-content, .popup) * {
         border: none;
         box-shadow: none !important;
         background-color: unset !important;
-        padding: 10px var(--moonlit-sb-message-inline-padding);
+        padding: 10px 0;
 
         /* General Avatar 一般頭像 */
         .avatar {
@@ -1055,7 +1049,7 @@ body:has(#sb-topbar-stack) #top-settings-holder :is(.drawer-content, .popup) * {
             width: var(--custom-chat-avatar-frame-size);
             min-width: var(--custom-chat-avatar-frame-size);
             padding-right: 0;
-            margin-right: var(--moonlit-sb-message-avatar-gap);
+            margin-right: calc(var(--customMesPadding) / 2);
         }
         .mes_button, .extraMesButtons > div {
             font-size: var(--mainFontSize);
@@ -1283,7 +1277,7 @@ body.hideChatAvatars #chat {
         .mes_timer,
         .mesIDDisplay,
         .tokenCounterDisplay {
-            margin-left: var(--moonlit-sb-message-inline-padding);
+            margin-left: 10px;
             transform: translateY(-18px);
         }
     }
@@ -1315,7 +1309,6 @@ body.bubblechat {
             border-radius: 0;
             margin: unset;
             padding: unset;
-            padding-inline: var(--moonlit-sb-message-inline-padding);
             margin-bottom: 15px;
             padding-top: 1px;
 
@@ -1369,7 +1362,7 @@ body.bubblechat {
 
             .mesAvatarWrapper {
                 margin-right: 0;
-                margin-left: var(--moonlit-sb-message-avatar-gap);
+                margin-left: calc(var(--customMesPadding) / 2);
             }
 
             .mes_block {
@@ -1405,10 +1398,8 @@ body.documentstyle {
     }
 
     #chat {
-        padding-inline: var(--moonlit-sb-message-inline-padding) !important;
-
         @media screen and (max-width: 1000px) {
-            padding: 1em var(--moonlit-sb-message-style-inline-padding) !important;
+            padding: 1em !important;
         }
 
         .mes {
@@ -1423,7 +1414,7 @@ body.documentstyle {
             }
 
             .ch_name {
-                margin-left: var(--moonlit-sb-message-inline-padding);
+                margin-left: 10px;
             }
         }
 
@@ -2879,16 +2870,10 @@ body.bubblechat {
 
 #chat .mes_text p {
     letter-spacing: var(--messageTextLetterSpacing, 0em) !important;
-    line-height: var(--messageLineHeight, var(--moonlit-sb-message-line-height-desktop)) !important;
+    line-height: var(--messageLineHeight, 1.55em) !important;
     font-size: var(--messageTextFontSize, var(--mainFontSize)) !important;
     margin-top: var(--mesParagraphSpacingTop, 0.5em) !important;
     margin-bottom: var(--mesParagraphSpacingBottom, 0.5em) !important;
-}
-
-@media screen and (max-width: 1000px) {
-    #chat .mes_text p {
-        line-height: var(--messageLineHeight, var(--moonlit-sb-message-line-height-mobile)) !important;
-    }
 }
 
 #ReverseProxyWarningMessage {
@@ -2926,7 +2911,7 @@ body.bubblechat {
     --moonlit-sb-swipe-counter-width: 38px;
     --moonlit-sb-swipe-edge-offset: 8px;
     --moonlit-sb-swipe-gap: 4px;
-    --moonlit-sb-swipe-inline-offset: calc(24px * var(--moonlit-sb-message-margin-scale));
+    --moonlit-sb-swipe-inline-offset: 24px;
 }
 
 :root[data-sb-compact-mode='true'] {
